fpp_analysis/src/test/redef/component_state_machine.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/component_state_machine.fpp:3:15
  |
3 | state machine C
  |               ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/redef/component_state_machine.fpp:1:1
  |
1 | passive component C { }
  | ----------------------- previous definition is here

